--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@ react-vite/blog-project-react/node_modules
 react-vite/blog-project-react/dist
 react-vite/blog-project-react/dist-ssr
 react-vite/blog-project-react/logs
+react-tutorial/node_modules
