--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ react-vite/blog-project-react/dist-ssr
 react-vite/blog-project-react/logs
 react-tutorial/node_modules
 react-assignment-1-product-listing/node_modules
+reacttutorial-classcomponent/node_modules
